project(
    'libcapt',
    'cpp',
    license: 'BSD-2-Clause',
    license_files: ['LICENSE'],
    default_options: [
        'buildtype=debugoptimized',
        'b_debug=if-release',
        'warning_level=3',
        'cpp_std=c++23',
    ],
    meson_version: '>=1.7.0'
)

subdir('libcapt')
subdir('tests')
subdir('examples')
